streamlit/streamlit-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit
  namespace: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamlit
  template:
    metadata:
      labels:
        app: streamlit
    spec:
      containers:
      - name: streamlit
        image: localhost:5001/streamlit-iris:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8501
