streamlit/streamlit-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-svc
  namespace: mlflow
spec:
  type: ClusterIP
  selector:
    app: streamlit
  ports:
    - port: 8501
      targetPort: 8501
